# drawview

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  config.h.in  configure  configure.ac  genversion.sh
app/: CMakeLists.txt  Makefile.am  Makefile.in  coord.cpp  coord.h  diagram.cpp  diagram.h  drawtypes.h  drawview.cpp  drawview.h  drawwidget.cpp  drawwidget.h  error.cpp  error.h  files.cpp  files.h  fonts.cpp  fonts.h  global.h  groupobject.cpp  groupobject.h  libraryobject.cpp  libraryobject.h  main.cpp  misc.cpp  object.cpp  object.h  paintoptions.cpp  paintoptions.h  palette.cpp  palette.h  paper.cpp  paper.h  pathobjects.cpp  pathobjects.h  radiate.cpp  radiate.h  reader.cpp  reader.h  replicates.cpp  (+13 more)
desktop/: CMakeLists.txt  Makefile.am  Makefile.in  drawview-mime.xml  drawview.desktop  drawviewui.rc  x-compressdraw.desktop  x-riscosdraw.desktop  x-riscosgridpro.desktop  x-riscoslibrary.desktop  x-riscosposter.desktop  x-riscosvector.desktop
examples/: 6ominoes.aff  AllCaps.vec  AllJoins.vec  Backdrop.aff  Barcelona.c56  CMakeLists.txt  Coupons.c56  GraphicEq.c4b  Hurricane.c4b  Makefile.am  Makefile.in  Metro.c56  MultiPlay.c4b  README  Spitfire.c4b  Ttnkhamun.c56  Viking.c56  brainVmind.c56  compass.c56  impossible.aff
filter/: CMakeLists.txt  Makefile.am  Makefile.in  lzw.c  main.c  riscoscompat.c
nondist/: TEMPLATE.cpp  TEMPLATE.h
po/: Makefile.in
riscos/draw/: compress00.h  decompress.c  drawLZW.h  drawcomp.h  drawobject.h  drawtypes.h
riscos/jjm/: program.h
riscos/riscos/: err.h  flex.h  xferrecv.h
riscos/sys/: io.h  ostypes.h  sprite.h  visdelay.h  wimp.h
share/: CMakeLists.txt  Makefile.am  Makefile.in  fontmap  modes  palette
utils/: cmdutils.c  cmdutils.h
